Track4/5_openshift_labels/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging-daemon
  labels:
    app: logging
spec:
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      containers:
      - name: logging-container
        image: busybox:latest
