Track4/5_openshift_labels/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dev-eu
  labels:
    environment: dev
    app: web
    region: EU
spec:
  replicas: 3
  selector:
    matchLabels:
      environment: dev
      app: web
      region: EU
  template:
    metadata:
      labels:
        environment: dev
        app: web
        region: EU
    spec:
      containers:
      - name: flask-app
        image: nginx:latest
        ports:
        - containerPort: 5000
