Track4/5_openshift_labels/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-dev-eu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: marietto.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-dev-eu-service
            port:
              number: 80
